--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
     </script>
   </head>
   <body>
-    <p id="server-time"></p>
+    <h1>BlockGame</h1>
+
+    <canvas
+            ref="game"
+            width="650"
+            height="480"
+            style="border: 1px solid black">
+    </canvas>
+    <p>
+      <button onclick="">Right</button>
+      <button onclick="">Left</button>
+      <button onclick="">Up</button>
+      <button onclick="">Down</button>
+    </p>
   </body>
 </html>
