--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
       let socket = io();
-      let el;
 
+      socket: {};
+      context: {};
+      let position: {
+        x: 0,
+        y: 0
+      };
+
+      this.context = this.$refs.game.getContext("2d");
+      this.socket.on("position", data => {
+      this.position = data;
+      this.context.clearRect(0,0, this.$refs.game.width, this.$refs.game.height);
+      this.context.fillRect(this.position.x, this.position.y, 20, 20);
+      });
+/*
       socket.on('time', (timeString) => {
         el = document.getElementById('server-time');
         el.innerHTML = 'Server time: ' + timeString;
       });
+
+ */
     </script>
   </head>
   <body>
